Fixed h4 alignment

--- a/stylesheets/swiss.css
+++ b/stylesheets/swiss.css
@@ -226,6 +226,7 @@ h4 {
     font-size: 22px;
     color: #222;
     line-height: 1.3;
+    text-align: left;
 }
 
 div.warning {
